--- a/content/cours/01-vocabulaire.html
+++ b/content/cours/01-vocabulaire.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Vocabulaire"
 linktitle: "Vocabulaire"
 date: "2020-11-30"
 read_date: "2020-11-30"
@@ -18,8 +18,6 @@ output:
 
 
 
-<div id="vocabulaire" class="section level2">
-<h2>Vocabulaire</h2>
 <p>Quelques mots très utilisés dans le paradigme bayésien :</p>
 <p><strong>paradigme :</strong></p>
 <p>Désigne un système cohérent de représentation du monde, une manière de voir les choses.</p>
@@ -29,4 +27,3 @@ output:
 <p>L’expression latine <em>a posteriori</em> est également très utilisée dans le cadre bayésien. Elle signifie <em>après coup</em> en français, ou plus précisément <em>en s’appuyant sur l’expérience, sur les faits constatés</em>. Étymologiquement cette expression vient de “<em>a posteriori ratione</em>” qui signifie en latin <em>par une raison qui vient après</em>, et s’oppose à <em>a priori</em>.</p>
 <p><strong>élicitation :</strong></p>
 <p>Action formalisant les connaissances d’un expert pour permettre de les partager, e.g. de les incorporer à un modèle.</p>
-</div>
