--- a/content/cours/03-bayesparadigm.html
+++ b/content/cours/03-bayesparadigm.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Le paradigme bayésien"
 linktitle: "Le paradigme bayésien"
 date: "2020-11-30"
 read_date: "2020-11-30"
@@ -13,13 +13,17 @@ csl: "../../static/bib/chicago-fullnote-bibliography-no-bib.csl"
 slides: "01-slides"
 output:
   blogdown::html_page:
-    toc: false
+    toc: true
 ---
 
 
+<div id="TOC">
+<ul>
+<li><a href="#le-théorème-de-bayes">Le théorème de Bayes</a></li>
+<li><a href="#bayésiens-vs.-fréquentistes-un-débat-dépassé">Bayésiens vs. Fréquentistes : un débat dépassé</a></li>
+</ul>
+</div>
 
-<div id="le-paradigme-bayésien" class="section level2">
-<h2>Le paradigme bayésien</h2>
 <div id="le-théorème-de-bayes" class="section level3">
 <h3>Le théorème de Bayes</h3>
 <p>Le terme <em>bayésien</em> provient du nom du révérend Thomas Bayes (Angleterre, XVIII<sup>ème</sup>). En 1763, ce dernier publie un article<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a> (posthume) dans lequel il expose le théorème suivant :
@@ -39,7 +43,6 @@ où <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</s
 <blockquote>
 <p>“<em>Être ou ne pas être bayésien, là n’est plus la question : il s’agit d’utiliser à bon escient les outils adaptés quand cela est necessaire.</em>” — Gilbert Saporta</p>
 </blockquote>
-</div>
 </div>
 <div class="footnotes">
 <hr />
