--- a/content/cours/04-modfreq.html
+++ b/content/cours/04-modfreq.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Rappel sur la modélisation fréquentiste"
 linktitle: "Rappel sur la modélisation fréquentiste"
 date: "2020-11-30"
 read_date: "2020-11-30"
@@ -18,7 +18,4 @@ output:
 
 
 
-<div id="rappel-sur-la-modélisation-fréquentiste" class="section level2">
-<h2>Rappel sur la modélisation fréquentiste</h2>
 <p>Considérons une suite de variables aléatoires <span class="math inline">\(iid\)</span> <span class="math inline">\(\boldsymbol{Y}=(Y_1, \dots, Y_n)\)</span>, dont on observe un échantillon <span class="math inline">\(\boldsymbol{y}=(y_1, \dots, y_n)\)</span>. Un modèle fréquentiste pour leur loi de probabilité est la famille de densité de probabilité suivante : <span class="math inline">\(f(y|\theta),~ \theta \in \Theta\)</span>. Avec ce modèle, on suppose qu’il existe une “vraie” distribution de <span class="math inline">\(Y\)</span> caractérisée par la “vraie” valeur du paramètre <span class="math inline">\(\theta^*\)</span> qui s’écrit <span class="math inline">\(f(y|\theta^*)\)</span>. On cherche alors un estimateur <span class="math inline">\(\widehat{\theta}\)</span>, ayant de bonnes propriétés asymptotiques le plus souvent (généralement sans biais pour <span class="math inline">\(\theta^*\)</span> et avec une variance la plus réduite possible).</p>
-</div>
