--- a/content/cours/10-diffposterior.html
+++ b/content/cours/10-diffposterior.html
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Une difficile estimation de la distribution a posteriori"
 linktitle: "Une difficile estimation de la distribution a posteriori"
 date: "2020-11-30"
 read_date: "2020-12-03"
@@ -13,10 +13,19 @@ csl: "../../static/bib/chicago-fullnote-bibliography-no-bib.csl"
 slides: "01-slides"
 output:
   blogdown::html_page:
-    toc: false
+    toc: true
 ---
 
 
+<div id="TOC">
+<ul>
+<li><a href="#une-difficile-estimation-de-la-distribution-a-posteriori">Une difficile estimation de la distribution <em>a posteriori</em></a><ul>
+<li><a href="#paramètres-multidimensionnels">Paramètres multidimensionnels</a></li>
+<li><a href="#statistique-bayésienne-computationnelle">Statistique bayésienne computationnelle</a></li>
+<li><a href="#méthode-de-monte-carlo">Méthode de Monte-Carlo</a></li>
+</ul></li>
+</ul>
+</div>
 
 <div id="une-difficile-estimation-de-la-distribution-a-posteriori" class="section level2">
 <h2>Une difficile estimation de la distribution <em>a posteriori</em></h2>
