--- a/content/cours/09-conclu.html
+++ b/content/cours/09-conclu.html
@@ -1,6 +1,6 @@
 ---
-title: ""
-linktitle: "Conclusion et mise en perspective de la modélisation bayésienne"
+title: "Conclusion et mise en perspective de la modélisation bayésienne"
+linktitle: "Conclusion"
 date: "2020-11-30"
 read_date: "2020-12-01"
 menu:
@@ -13,13 +13,17 @@ csl: "../../static/bib/chicago-fullnote-bibliography-no-bib.csl"
 slides: "01-slides"
 output:
   blogdown::html_page:
-    toc: false
+    toc: true
 ---
 
 
+<div id="TOC">
+<ul>
+<li><a href="#les-points-essentiels">Les points essentiels</a></li>
+<li><a href="#intérêt-de-lapproche-bayésienne">Intérêt de l’approche bayésienne</a></li>
+</ul>
+</div>
 
-<div id="conclusion-et-mise-en-perspective-de-la-modélisation-bayésienne" class="section level2">
-<h2>Conclusion et mise en perspective de la modélisation bayésienne</h2>
 <div id="les-points-essentiels" class="section level3">
 <h3>Les points essentiels</h3>
 <ol style="list-style-type: decimal">
@@ -44,5 +48,4 @@ possédant la propriété d’invariance.</p></li>
 <div id="intérêt-de-lapproche-bayésienne" class="section level3">
 <h3>Intérêt de l’approche bayésienne</h3>
 <p>L’analyse bayésienne est un outil statistique d’analyse de données, au même titre que d’autres méthodologies comme les forêts aléatoires, les méthodes de réduction de dimension, les modèles à classes latentes, etc. Il est particulièrement utile lorsque peu de données sont disponibles et que les méthodes fréquentistes ne permettent pas d’obtenir de résultats (par exemple une régression logistique avec très peu voire pas d’évènement, i.e. beaucoup voire que des 0 dans le cas d’évènements extrêmement rares), et/ou lorsqu’il existe de fortes connaissances <em>a priori</em> qu’il est utile d’intégrer dans un modèle avec peu de d’observations (par exemple le modèle utilisé par <em>FiveThirtyEight</em> pour prédire les résultats des élections américaines de 2008 dans chaque état américain, dans certains desquels peu de sondages étaient effectués, ou encore dans les études de génomique où le nombre d’observations disponible pour chaque gène est généralement relativement faible mais que beaucoup de gènes sont observés). Comme toute méthode statistique, l’analyse bayésienne présente des avantages et des inconvénients qui vont avoir plus ou moins d’importance selon le problème à résoudre.</p>
-</div>
 </div>
