--- a/content/cours/17-CRM.html
+++ b/content/cours/17-CRM.html
@@ -1,6 +1,6 @@
 ---
-title: ""
-linktitle: "Essai clinique adaptatifs de phase I/II : analyse bayésienne et méthodes de recherche de doses"
+title: "Essai clinique adaptatifs de phase I/II : analyse bayésienne et méthodes de recherche de doses"
+linktitle: "Essais en CRM"
 date: "2020-11-30"
 read_date: "2020-11-30"
 menu:
@@ -18,8 +18,6 @@ output:
 
 
 
-<div id="essai-clinique-adaptatifs-de-phase-iii-analyse-bayésienne-et-méthodes-de-recherche-de-doses" class="section level2">
-<h2>Essai clinique adaptatifs de phase I/II : analyse bayésienne et méthodes de recherche de doses</h2>
 <div id="introduction-à-la-méthode-de-ré-évaluation-séquentielle-pour-la-recherche-de-dose" class="section level3">
 <h3>Introduction à la méthode de ré-évaluation séquentielle pour la recherche de dose</h3>
 <p>La méthode de réévaluation séquentielle (<em>Continual Reassessment Methods</em> — CRM)
@@ -30,7 +28,6 @@ peut être utilisé dans les essais de phase I en escalade de doses, où l’obj
 <div id="lecture-critique-de-larticle-de-kaguelidou-et-al.-plos-one-2016" class="section level3">
 <h3>Lecture critique de l’article de Kaguelidou <em>et al.</em> (<em>PLOS ONE</em>, 2016)</h3>
 <p>Kaguelidou <em>et al.</em><span class="citation"><a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></span> ont conduit une étude de recherche de dose pour l’oméprazole afin de normaliser le pH gastrique chez les nouveau-nés atteints de Reflux Gastro-Oesophagien (GRO) acide (<em>Gastro-Esophageal Acid Reflux</em> — <em>GEAR</em>) afin de déterminer la dose efficace minimale. Ils ont utilisé un design en CRM afin de sélectionner la dose du médicament aussi près que possible du niveau d’efficacité cible défini au préalable (avec un intervalle de crédibilité de 95%).</p>
-</div>
 </div>
 <div class="footnotes">
 <hr />
