--- a/content/cours/10-diffposterior.html
+++ b/content/cours/10-diffposterior.html
@@ -45,7 +45,7 @@ output:
 <p>En s’appuyant sur la loi des grands nombres, il s’agit d’obtenir un échantillon dit “de Monte-Carlo” permettant de calculer divers fonctionnelles à partir de la distribution de probabilité suivie par l’échantillon. En effet <span class="math inline">\(\mathbb{E}[f(X)] = \int_x f(x)p_X(x)dx\)</span>. Or grâce à la loi des grands nombres, on a : <span class="math inline">\(\mathbb{E}[f(X)] = \frac{1}{N}\sum_i f(x_i)\)</span> à condition que les <span class="math inline">\(x\)</span> forment un échantillon <span class="math inline">\(iid\)</span> selon la loi de <span class="math inline">\(X\)</span>. On peut ainsi estimer un certain nombre d’intégrales, à condition d’être capable d’échantillonner selon <span class="math inline">\(p(x)\)</span>.</p>
 <div class="Example">
 <p>Estimation du nombre <span class="math inline">\(\pi=3,14\dots\)</span> à l’aide de nombres aléatoires.</p>
-<p><img src="../../static/cours/IllusRoulette.png" width="944" /></p>
+<p><img src="/cours/IllusRoulette.png" /><!-- --></p>
 <ol style="list-style-type: decimal">
 <li>La probabilité d’être dans le cercle plutôt que dans le carré est le rapport entre la surface du cercle et celle du carré : <span class="math inline">\(p_C= \frac{\pi R^2}{(2R)^2}=\frac{\pi}{4}\)</span></li>
 <li>On génère <span class="math inline">\(n\)</span> points <span class="math inline">\(\left((x_{11},x_{21}),\dots,(x_{1n},x_{2n})\right)=(P_1,\dots,P_n)\)</span> dans le repère <span class="math inline">\(36\times 36\)</span>, à l’aide de la roulette qui génère les coordonnées une à une.</li>
