--- a/content/cours/11-echantillondirect.html
+++ b/content/cours/11-echantillondirect.html
@@ -1,6 +1,6 @@
 ---
 title: "Méthodes d'échantillonnage directes"
-linktitle: "Méthodes d'échantillonnage directes"
+linktitle: "Échantillonnage direct"
 date: "2020-11-30"
 read_date: "2020-12-03"
 menu:
@@ -38,6 +38,7 @@ output:
 </ol>
 <p>Choisir <span class="math inline">\(a\)</span>, <span class="math inline">\(b\)</span> et <span class="math inline">\(m\)</span> de manière à ce que <span class="math inline">\(y_n\)</span> ait une période très longue et que <span class="math inline">\((x_1,\dots , x_n)\)</span> puisse être considéré comme <span class="math inline">\(iid\)</span></p>
 </div>
+<p><br></p>
 <p>où <span class="math inline">\(y_0\)</span> est appelé la “graine” (<em>seed</em> en anglais). On remarque que l’on a necessairement <span class="math inline">\(0 \leq y_n \leq m - 1\)</span>. En pratique on prend <span class="math inline">\(m\)</span> très grand (par exemple <span class="math inline">\(2^{19937}\)</span>, la valeur par défaut dans R qui utilise l’algorithme Mersenne-Twister). Dans ce cours, on ne va pas plus s’intéresser à la génération de nombre pseudo-alétoires selon la loi uniforme sur <span class="math inline">\([0;1]\)</span>, il s’agit d’un outil que l’on considère fiable et qui est utilisé par les différents algorithmes présentés par la suite.</p>
 </div>
 <div id="autres-distributions" class="section level4">
@@ -64,9 +65,11 @@ sont indépendantes et suivent chacune la loi normale <span class="math inline">
 <p><strong>Inverse généralisée</strong><br />
 Pour une fonction <span class="math inline">\(F\)</span> définie sur <span class="math inline">\(\mathbb{R}\)</span>, on définit son inverse généralisée par <span class="math display">\[ F^{-1}(u) = \text{inf}\{x; F(x)&gt;u\}\]</span></p>
 </div>
+<p><br></p>
 <div class="MyProp">
 <p>Soit <span class="math inline">\(F\)</span> la fonction de répartition d’une distribution de probabilité, et soit <span class="math inline">\(U\)</span> une variable aléatoire suivant une loi uniforme sur <span class="math inline">\([0;1]\)</span>. Alors <span class="math inline">\(F^{-1}(U)\)</span> définit une variable aléatoire ayant pour fonction de répartition <span class="math inline">\(F\)</span>.</p>
 </div>
+<p><br></p>
 <p>On déduit de la propriété ci-dessus que si l’on connaît la fonction de répartition de la loi selon laquelle on veut simuler, et si l’on est capable de l’inverser, alors on peut générer un échantillon suivant cette loi à partir d’un échantillon uniforme sur <span class="math inline">\([0;1]\)</span>.</p>
 <div class="Example">
 <p>On veut générer un échantillon suivant la loi exponentielle de paramètre <span class="math inline">\(\lambda\)</span><br />
@@ -74,6 +77,7 @@ On a la densité de la loi exponentielle qui est <span class="math inline">\(f(x
 Posons <span class="math inline">\(F(x)=u\)</span>. On remarque alors que <span class="math inline">\(x=-\frac{1}{\lambda}\log(1-u)\)</span>.<br />
 Si <span class="math inline">\(U\sim \mathcal{U}_{[0;1]}\)</span>, alors <span class="math inline">\(X=F^{-1}(U)\sim Exp(\lambda)\)</span>.</p>
 </div>
+<p><br></p>
 </div>
 <div id="méthode-dacceptation-rejet" class="section level4">
 <h4>Méthode d’acceptation-rejet</h4>
@@ -92,16 +96,20 @@ sinon on le <strong>rejette</strong> et on retourne en 1.</p></li>
 </ol>
 <p><span class="math inline">\((y_1, \dots, y_n) \overset{iid}{\sim}f\)</span></p>
 </div>
+<p><br></p>
 <p>Plus <span class="math inline">\(M\)</span> est petit, plus le taux de rejet est faible et plus l’algorithme est efficace (au sens où il nécessite moins d’itérations pour obtenir un échantillon de taille <span class="math inline">\(n\)</span>). On a donc intérêt à choisir <span class="math inline">\(g\)</span> le plus proche possible de <span class="math inline">\(f\)</span>, en particulier lorsque la dimension augmente (l’impact de <span class="math inline">\(M\)</span> étant d’autant plus important alors). Néanmoins, la loi de proposition aura nécessairement des queues plus lourdes que la loi cible, et ce dans toutes les dimensions de l’espace des paramètres. À cause du fléau de la dimension, lorsque le nombre de paramètres augmente, le taux d’acceptation décroit très rapidement. </p>
 <div class="Exercise">
 <p>👉  <em>Exercice</em> <em>1</em> : Construire un pseudo-échantillon de taille <span class="math inline">\(n\)</span> selon la loi discrète suivante (multinomiale à <span class="math inline">\(m\)</span> éléments <span class="math inline">\(\{x_1, \dots, x_m\}\)</span>) :
 <span class="math display">\[P(X=x) = p_1\delta_{x_1}(x) + p_2\delta_{x_2}(x) + \dots p_m\delta_{x_m}(x) \quad \text{ avec }\sum_{i=1}^m p_i = 1  \text{ et } \delta_{a}(x) = \mathbb{1}_{\{x=a\}}\]</span></p>
 </div>
+<p><br></p>
 <div class="Exercise">
 <p>👉  <em>Exercice</em> <em>2</em> : Grâce à la méthode par inversion, générer un pseudo-échantillon de taille suivant une loi de Cauchy (dont la densité est <span class="math inline">\(f(x)=\frac{1}{\pi(1+x^2)}\)</span>), sachant que <span class="math inline">\(\arctan&#39;(x)=\frac{1}{(1+x^2)}\)</span> et que <span class="math inline">\(\underset{x\rightarrow-\infty}{\lim} arctan(x) = -\frac{\pi}{2}\)</span>.</p>
 </div>
+<p><br></p>
 <div class="Exercise">
 <p>👉  <em>Exercice</em> <em>3</em> : Écrire un algorithme d’acceptation-rejet pour simuler la réalisation d’un pseudo-échantillon de taille <span class="math inline">\(n\)</span> d’une loi normale <span class="math inline">\(N(0,1)\)</span> en utilisant une loi de Cauchy comme proposition. Trouvez la valeur de <span class="math inline">\(M\)</span> optimale.</p>
 </div>
+<p><br></p>
 </div>
 </div>
