--- a/content/cours/12-algosMCMC.html
+++ b/content/cours/12-algosMCMC.html
@@ -59,7 +59,7 @@ L’ensemble des valeurs possible pour <span class="math inline">\(X_i\)</span> 
 <em><strong>Théorème ergodique</strong> (espace infini)</em> : Une chaîne de Markov irréductible et récurrente positive (i.e. le temps de retour moyen est fini) admet une unique loi de probabilité invariante <span class="math inline">\(\tilde{p}\)</span>. Si cette chaîne de Markov est de plus apériodique, alors elle converge en loi vers <span class="math inline">\(\tilde{p}\)</span>.</p>
 <div class="Example">
 <p>Bébé 👶<br />
-Nous allons maintenant développer un exemple d’une chaîne de Markov à espace d’état discret. Supposons que l’état de Bébé, suive à chaque minute une chaîne de Markov discrète à trois états : dormir (D), manger (M), changer la couche (C). Ainsi, son état dans une minute ne dépend que de son état actuel, et pas des minutes précédentes. Supposons que la matrice des probabilités de transition soit alors la suivante :
+Nous allons maintenant développer un exemple d’une chaîne de Markov à espace d’état discret. Supposons que l’état de Bébé, suive à chaque minute une chaîne de Markov discrète à trois états : dormir 😴 (D), manger 🍼 (M), changer la couche 💩 (C). Ainsi, son état dans une minute ne dépend que de son état actuel, et pas des minutes précédentes. Supposons que la matrice des probabilités de transition soit alors la suivante :
 <span class="math display">\[P = 
 \begin{pmatrix}
 X_i/X_{i+1} &amp; D &amp; M &amp; C \\
@@ -70,7 +70,7 @@ C &amp; 0.8 &amp; 0 &amp; 0.2\\
 <p>👉 1) Selon vous, la chaîne est-elle irréductible? Récurrente? Apériodique? (on pourra s’aider d’un graphique représentant les différents états et leurs transitions)<br />
 <span class="math inline">\(\quad\)</span><br />
 </p>
-<p>👉  2) Supposons que Bébé dorme. Que fait-il 2 min après? et 10 min après ?<br />
+<p>👉  2) Supposons que Bébé dorme (🤞!). Que fait-il 2 min après? et 10 min après ?<br />
 <span class="math display">\[x_0 = \phantom{\begin{pmatrix}
 1 \\
 0 \\
